# agent-discovery-protocol

./: .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  README.md
.claude/: settings.local.json
docs/: aup.md  auth-broker-design.md  pivot-unified-billing.md  tos-audit.md
gateway-mcp/: README.md  package-lock.json  package.json
gateway-mcp/scripts/: copy-static.mjs
gateway-mcp/src/: auth.ts  caller.ts  config-page.html  config-server.ts  config.ts  credentials.ts  discovery.ts  guides.ts  index.ts  init.ts  service-guides.ts  types.ts
registry/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
registry/migrations/: 001_add_capability_detail_json.sql  002_add_default_userid_me.sql  003_pivot_unified_billing.sql  004_drop_marketplace_tables.sql  005_add_setup_guide.sql
registry/scripts/: bootstrap-db.ts
registry/src/: middleware.ts
registry/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  (+1 more)
sdks/: .gitignore
sdks/express/: .npmignore  README.md  package.json
sdks/fastapi/: README.md  pyproject.toml
sdks/fastapi/agent_well_known/: __init__.py  manifest.py
sdks/nextjs/: .npmignore  LICENSE  README.md  package.json  tsconfig.json
sdks/spring-boot/: README.md  pom.xml
spec/: README.md
spec/examples/: email-api-send_email-detail.json  email-api.json  invoicing-api-create_invoice-detail.json  invoicing-api.json  newrelic-api-list_applications-detail.json  newrelic-api.json  statuspage-api-manage_incidents-detail.json  statuspage-api.json  uptimerobot-api-get_monitors-detail.json  uptimerobot-api.json  weather-api-get_current_weather-detail.json  weather-api.json
tools/: assign-categories.js
tools/manifest-generator/: README.md  catalog.yaml  package-lock.json  package.json  tsconfig.json
(+8645 files in other folders)
