[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-well-known-fastapi"
version = "1.0.0"
description = "FastAPI integration for the Agent Discovery Protocol. Serve a /.well-known/agent manifest so AI agents can discover your API at runtime."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Agent Discovery Protocol Contributors"}
]
keywords = [
    "agent-discovery",
    "well-known",
    "fastapi",
    "ai-agent",
    "mcp",
    "service-discovery",
    "agent-discovery-protocol"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.68.0",
    "pydantic>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/user/agent-discovery-protocol/tree/main/sdks/fastapi"
Repository = "https://github.com/user/agent-discovery-protocol"
Issues = "https://github.com/user/agent-discovery-protocol/issues"
Specification = "https://github.com/user/agent-discovery-protocol/tree/main/spec"

[tool.setuptools.packages.find]
include = ["agent_well_known*"]
